syntax = "proto3";

option go_package = "gitlab.com/aous.omr/sqlite-og";

service SqliteOG {
  rpc Query(Statement) returns (QueryResult){}
  rpc Execute(Statement) returns (ExecuteResult){}
  rpc ExecuteQuery(Statement) returns (ExecuteQueryResult){}
  rpc CreateSQLiteFunction(Signature) returns (CreateFunctionResult){}
  rpc Callback(stream InvocationResult) returns (stream Invoke){}
  rpc Connection(ConnectionRequest) returns (ConnectionResponse){}
  rpc Close(CloseRequest) returns(Empty){}
}

message Empty{}

message CloseRequest {
  string connection_id = 1;
}

message ConnectionRequest {
  string db_name = 1;
  repeated string functions = 2;
  repeated string aggregators = 3;
}

message ConnectionResponse {
  string connection_id = 1;
}

message InvocationResult {
  bool initial = 1;
  repeated string result = 2;
}

message Invoke {
  string functionName = 1;
  repeated string args = 2;
}

message ExecuteQueryResult {
  repeated string columns = 1;
  repeated Row rows = 2;
  int64 lastInsertId = 3;
  int64 affectedRows = 4;
}

message Statement {
  string sql = 1;
  repeated string params = 2;
  string cnx_id = 3;
}

message Row {
  repeated string fields = 1;
}

message QueryResult {
  bool success = 1;
  repeated string columns = 2;
  repeated Row rows = 3;
}

message ExecuteResult {
  bool success = 1;
  int64 lastInsertId = 2;
  int64 affectedRows = 3;
}

message Signature {
  string name = 1;
  int32 num_params = 2;
}

message CreateFunctionResult {
  bool ok = 1;
}